# dynamic_lstopo

./: .gitignore  README  README.md  configure.ac
config/: hwloc.m4  hwloc_internal.m4
contrib/ci.inria.fr/: Jenkinsfile-basic
doc/: doxygen-config.cfg.in
hwloc/: Makefile.am  topology-bench.c
include/: Makefile.am  hwloc.h  monitor.h
utils/: Makefile.am
utils/hwloc/: Makefile.am  test-hwloc-distances.output
utils/lstopo/: Makefile.am  lstopo-cairo-perf.c  lstopo-cairo.c  lstopo-cairo.h  lstopo-draw.c  lstopo-fig.c  lstopo-text.c  lstopo-windows.c  lstopo.c  lstopo.h  main.c  monitor.1in
utils/monitor/: Makefile  Makefile.am  example.txt  list_avail.c  make_scanner.c  monitor.c  monitor.h  monitor_replay.c  monitor_replay.h  monitor_utils.h  parser.h  parser.y  pwatch.c  pwatch.h  scanner.l
utils/monitor/demo/: Makefile.am  linked_list.c  linked_list.h  perf_group.txt  shared_miss_gen.c
utils/monitor/resources/: averell_perf_group.txt  example.txt  morris.txt
utils/monitor/scripts/: make_scanner.sh
utils/monitor/src/: main.c  monitor.c  monitor.h  parser.c  parser.h  parser.tab.h  parser.y  pwatch.c  pwatch.h  scanner.c  scanner.l
